# GraviT

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  SetGravCompileEnv  demos.html  gallery.html  getting_gravit.html  index.html  related_projects.html
CMake/: CompilerInfo.cmake  FindEmbree.cmake  FindMPE.cmake  FindManta.cmake  FindObjreader.cmake  FindOptiX.cmake  boost.cmake  clang.cmake  mpi.cmake
Test/CTESTtest/testOutput/: test1.ppm  test2.ppm
Test/GVTTest/: GVTTest.cpp
cavit/src/: gvtDisplay.cc  gvtServer.cc  gvtState.cc  gvtState.h  gvtWorker.cc  test.cc
css/: stylesheet.css
data/: box.conf  bunny.conf  bunny_cavit.conf  mpitrace.conf  sibenik.conf
doc/: GraviT User Guide.docx  doxyconfig.in
eric/: issues.txt  node_size_test.py  render_stuff.sh  run_stuff_async_size_1.slurm  simple_single_frame.sh
eric/data/: simple0.ply
eric/data/flat/: flat0.ply
eric/data/simple/: simple0.ply
eric/golden/: golden_1024.ppm  golden_128.ppm  golden_256.ppm  golden_512.ppm
pygvt/: gvtVol.py  setenv.sh  setup.py  test.py
pygvt/src/gvt/: gvt.cpp  gvt.pyx
src/Backend/Manta/: CMakeLists.txt  gvtmanta.h
src/Backend/Manta/Data/: gvt_manta.h
src/Backend/Manta/Dataset/: MantaDataset.C  MantaDataset.h
src/Backend/Manta/Domain/: MantaDomain.C  MantaDomain.h
src/Backend/Manta/ProcessQueue/: MantaProcessQueue.cpp
src/Backend/Optix/: CMakeLists.txt  gvtoptix.h
src/Backend/Optix/Data/: ConvertKernels.cu  gvt_optix.h
src/Backend/Optix/Dataset/: OptixDataset.C
src/Backend/Optix/Domain/: OptixDomain.C  OptixDomain.h
src/Backend/Optix/ProcessQueue/: OptixProcessQueue.cpp
src/Frontend/ConfigFile/: CMakeLists.txt  RayTracer.C  RayTracer.h
src/Frontend/ConfigFile/Dataset/: Dataset.h  GeometryDataset.C  MantaDataset.C  OptixDataset.C  VolumeDataset.C
src/GVT/: CMakeLists.txt
src/GVT/Data/: transform.h
src/GVT/Data/primitives/: gvt_bbox.cpp  gvt_bbox.h  gvt_lightsource.cpp  gvt_lightsource.h  gvt_material.cpp  gvt_material.h  gvt_material_list.C  gvt_material_list.h  gvt_mesh.cpp  gvt_mesh.h  gvt_ray.cpp  gvt_ray.h
src/GVT/Data/scene/: Color.h  Image.h
src/GVT/DataSet/: Dataset.cpp  Dataset.h
src/GVT/Domain/: Domain.cpp  Domain.h  GeometryDomain.C  GeometryDomain.h
src/GVT/Environment/: Camera.cpp  Camera.h  RayTracerAttributes.cpp  RayTracerAttributes.h
src/GVT/Math/: Vector.h  VectorOperators.inl
src/GVT/Tracer/: DomBVH.cpp  DomBVH.h  DomBox.cpp  DomBox.h  DomainTracer.h  HybridTracer.h  ImageTracer.h  Tracer.h
src/GVT/utils/: readply.cpp  wavefront_mtl_loader.C  wavefront_mtl_loader.h  wavefront_obj_loader.C  wavefront_obj_loader.h
src/apps/: CMakeLists.txt
src/apps/async/: async.cpp
src/apps/mpitrace/: CMakeLists.txt  MPITrace.C
src/apps/ns/: PlyApp.cpp  SimpleApp.cpp
src/apps/render/: ConfigFileLoader.cpp  ConfigFileLoader.h  DomainMpiRenderer.cpp  DomainMpiRenderer.h  EmbreeRayTracer.cpp  EricApp-backup.cpp  EricApp.cpp  EricApp.h  GLTrace.cpp  GVTTrace.cpp  ImageDiff.cpp  MpiApp.cpp  MpiApp.h  MpiRenderer.cpp  MpiRenderer.h  MpiRendererApp.cpp  PlyApp.cpp  RenderAPI.cpp  RenderAPI.h  SimpleApp.cpp  SimpleFileLoadApp.cpp  SimpleMPIApp.cpp  TestScenes.cpp  TestScenes.h  TiledMantaRayTracer.cpp  TiledMantaRayTracer.h  VolApp.cpp
src/apps/test/: RenderAPI_DOMAIN_Test.cpp  testingHelper.h
src/config/: config.h.in
src/gvt/core/: Context.h  CoreContext.cpp  CoreContext.h  Database.cpp  Database.h  DatabaseNode.cpp  DatabaseNode.h  Debug.h  Scheduler.h
src/gvt/core/acomm/: acommunicator.cpp  acommunicator.h  message.cpp  message.h
src/gvt/core/comm/: acommunicator.cpp  acommunicator.h  communicator.cpp  communicator.h  message.cpp  message.h
src/gvt/core/comm/communicator/: acomm.cpp  acomm.h  scomm.cpp  scomm.h
src/gvt/core/comm/vote/: vote.cpp  vote.h
src/gvt/core/composite/: Composite.h
src/gvt/core/context/: CoreContext.cpp  CoreContext.h  Database.cpp  Database.h  DatabaseNode.cpp  DatabaseNode.h  Types.h  Uuid.h  Variant.cpp  Variant.h
src/gvt/core/data/primitives/: BBox.cpp  BBox.h
src/gvt/core/mpi/: Application.cpp  Application.h  Comm.h  Message.cpp  Message.h  MessageManager.cpp  MessageManager.h  MessageQ.cpp  MessageQ.h  RayQManager.cpp  RayQManager.h  RayWork.h  Rays.cpp  Rays.h  RenderTileWork.h  RenderWork.cpp  RenderWork.h  SingleNode.h  Work.cpp  Work.h  classes.h  main.cpp  main.h  smem.cpp  smem.h
src/gvt/core/schedule/: SchedulerBase.h
src/gvt/core/tracer/: tracer.cpp  tracer.h
src/gvt/core/utils/: timer.h
src/gvt/render/: Adapter.h  Context.h  RenderContext.cpp  Renderer.cpp  Renderer.h  Types.h
src/gvt/render/actor/: Ray.cpp  Ray.h  RayPacket.h  ShadowRay.cpp  ShadowRay.h
src/gvt/render/adapter/: AdapterCache.h
src/gvt/render/algorithm/: DomainTracer.h  HybridTracer.h  ImageTracer.h  TracerBase.h  gvtDisplay.cpp  gvtDisplay.h  gvtServer.cpp  gvtServer.h  gvtState.h  gvtWorker.cpp  gvtWorker.h
src/gvt/render/api/: api.cpp  api.h
src/gvt/render/cntx/: rcontext.h
src/gvt/render/composite/: IceTComposite.cpp  IceTComposite.h  ImageComposite.h  composite.cpp  composite.h
src/gvt/render/context/: RenderContext.cpp  RenderContext.h
src/gvt/render/data/: Dataset.h  Primitives.h
src/gvt/render/schedule/: DomainScheduler.h  HybridScheduler.h  ImageScheduler.h
src/gvt/render/tracer/: ImageTracer.cpp  ImageTracer.h  RayQueueManager.h  RayTracer.cpp  RayTracer.h
src/gvt/render/unit/: Canvas.cpp  Canvas.h  CommonWorks.cpp  CommonWorks.h  Communicator.cpp  Communicator.h  Composite.cpp  Composite.h  Contents.h  DomainTileWork.cpp  DomainTileWork.h  DomainTracer.cpp  DomainTracer.h  DomainTracerProfiling.h  DomainWorks.cpp  DomainWorks.h  DoneTestWork.cpp  DoneTestWork.h  GeometryWork.cpp  GeometryWork.h  ImageTileWork.cpp  ImageTileWork.h  MpiRenderer.cpp  MpiRenderer.h  PixelGatherWork.cpp  PixelGatherWork.h  PixelWork.cpp  PixelWork.h  Profiler.cpp  Profiler.h  RayCommitDoneWork.cpp  RayCommitDoneWork.h  RayCountWork.cpp  RayCountWork.h  RayTallyWork.cpp  RayTallyWork.h  RayTracer.h  RayTransferWork.cpp  RayTransferWork.h  RayTxDoneWork.cpp  (+24 more)
src/utils/: ray_cost.cpp
(+61 files in other folders)
