PROJECT(MPItrace)

MESSAGE(STATUS "---> MPItrace")

IF (GVT_APP_MPITRACE)
    IF(NOT GVT_BE_MANTA)
        MESSAGE("MPI trace requires Manta Backend")
    ENDIF(NOT GVT_BE_MANTA)

    IF(NOT GVT_FE_CONFFILE)
        MESSAGE("MPI trace requires Config File Front end")
    ENDIF(NOT GVT_FE_CONFFILE)

    FIND_PACKAGE(Manta)

    INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
    
    FILE(GLOB_RECURSE GVT_MPITRACE_SRC ${PROJECT_SOURCE_DIR}/*.cpp
      ${PROJECT_SOURCE_DIR}/*.C)
    FILE(GLOB_RECURSE GVT_MPITRACE_HDR ${PROJECT_SOURCE_DIR}/*.h
      ${PROJECT_SOURCE_DIR}/*.hpp)

    ADD_EXECUTABLE(${PROJECT_NAME} ${GVT_MPITRACE_SRC} ${GVT_MPITRACE_HDR})
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} GVTCORE GVTMANTA GVTCONFFILE
      ${MANTA_TARGET_LINK_LIBRARIES} ${MPI_LIBRARIES} ${Boost_LIBRARIES} ) 
    CONFIGURE_LIB_MPI()
ENDIF(GVT_APP_MPITRACE)
