PROJECT(MPItrace)

MESSAGE(STATUS "---> MPItrace")
IF(NOT GVT_BE_MANTA)
  MESSAGE("MPI trace requires Manta Backend")
ENDIF(NOT GVT_BE_MANTA)

IF(NOT GVT_FE_CONFFILE)
  MESSAGE("MPI trace requires Config File Front end")
ENDIF(NOT GVT_FE_CONFFILE)

FIND_PACKAGE(Manta)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

SET(FILE_CONFIG_LIB ${MPE_LIB2} ${MPE_LIB1} ${MPI_LIBRARIES} ${Boost_LIBRARIES})

FILE(GLOB_RECURSE GVT_MPITRACE_SRC ${PROJECT_SOURCE_DIR}/*.cpp
  ${PROJECT_SOURCE_DIR}/*.C)
FILE(GLOB_RECURSE GVT_MPITRACE_HDR ${PROJECT_SOURCE_DIR}/*.h
  ${PROJECT_SOURCE_DIR}/*.hpp)

IF(GVT_BE_MANTA)
    INCLUDE_DIRECTORIES(${GVTMANTA_INCLUDE_DIRS})
    SET(FILE_CONFIG_LIB ${FILE_CONFIG_LIB} ${MANTA_TARGET_LINK_LIBRARIES})
    SET(FILE_CONFIG_LIB ${FILE_CONFIG_LIB} "GVTMANTA")
ENDIF(GVT_BE_MANTA)

IF(GVT_BE_OPTIX) 
    INCLUDE_DIRECTORIES(${GVTOPTIX_INCLUDE_DIRS})
    SET(FILE_CONFIG_LIB ${FILE_CONFIG_LIB} "GVTOPTIX" ${GVTOPTIX_LIBRARIES})
ENDIF(GVT_BE_OPTIX)

message("mpitrace file config lib is : ${FILE_CONFIG_LIB}")
ADD_EXECUTABLE(${PROJECT_NAME} ${GVT_MPITRACE_SRC} ${GVT_MPITRACE_HDR})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} GVTCORE GVTCONFFILE ${FILE_CONFIG_LIB}) 


CONFIGURE_LIB_MPI()
